<?xml version="1.0" encoding="utf-8"?><!--
  ~ strings.xml
  ~ RecipeLink-SQLBrite
  ~
  ~ Created by Tyler Madonna on 6/30/2017.
  ~ Copyright © 2017 Tyler Madonna. All rights reserved.
  -->

<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Recipe Link</string>
    <string name="title_recipes_all">All</string>
    <string name="title_recipes_favorite">Favorite</string>
    <string name="title_new_recipe">Add Recipe</string>
    <string name="title_edit_recipe">Edit Recipe</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_collection">Add Collection</string>
    <string name="title_change_image">Change Image</string>

    <string name="title_shortcut_favorite_long">Favorite recipes</string>
    <string name="title_shortcut_favorite_short">Favorites</string>
    <string name="title_shortcut_search_long">Search recipes</string>
    <string name="title_shortcut_search_short">Search</string>

    <string name="title_pref_section_theme">Theme</string>
    <string name="title_pref_item_theme">Theme</string>

    <string name="pref_theme_item_light">Light</string>
    <string name="pref_theme_item_dark">Dark</string>
    <string name="pref_theme_item_battery">Set by Battery Saver</string>
    <string name="pref_theme_item_system">System default</string>

    <string-array name="pref_options_theme">
        <item>@string/pref_theme_item_light</item>
        <item>@string/pref_theme_item_dark</item>
        <item>@string/pref_theme_item_battery</item>
    </string-array>

    <string-array name="pref_options_values_theme">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_options_values_default_theme">2</string>

    <string name="title_pref_section_contact">Contact</string>
    <string name="title_pref_section_about">About</string>
    <string name="title_pref_item_contact">Contact developer</string>
    <string name="summary_pref_item_contact">Ask a question or report a bug</string>
    <string name="title_pref_item_rate">Rate app</string>
    <string name="summary_pref_item_rate">Rate and leave a review</string>
    <string name="title_pref_item_licenses">Open source licenses</string>
    <string name="summary_pref_item_licenses">License details for open source software</string>
    <string name="title_pref_item_version">Version</string>

    <string name="content_authority" translatable="false">com.inelasticcollision.recipelink</string>

    <string name="prompt_no_recipes_found">No recipes found</string>
    <string name="prompt_share_from_browser_prompt">Try sharing recipes to Recipe Link from your browser</string>
    <string name="prompt_navigation_drawer_open">Open navigation drawer</string>
    <string name="prompt_navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_error_loading_content">There was an error loading the page content</string>
    <string name="prompt_error_saving_content">There was an error saving the recipe. Please try again.</string>
    <string name="prompt_error_no_email">There are no email apps installed</string>
    <string name="prompt_app_updating">Updating Recipe Link. Please wait&#8230;</string>
    <string name="prompt_no_notes">No notes found</string>
    <string name="prompt_no_keywords">No collection found</string>
    <string name="prompt_delete_recipe">Delete recipe?</string>
    <string name="prompt_discard_recipe">Discard recipe?</string>
    <string name="prompt_discard_changes">Discard changes?</string>

    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_change_photo">Change photo</string>
    <string name="action_add_recipe">Add recipe</string>
    <string name="action_all_recipes">All</string>
    <string name="action_favorite_recipes">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_discard">Discard</string>
    <string name="action_edit">Edit</string>
    <string name="action_learn_how">Learn how</string>

    <string name="hint_title">Title</string>
    <string name="hint_url">Link</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_search">Search</string>
    <string name="hint_add_keyword">Add collection</string>
    <string name="hint_add_another_keyword">Add another collection</string>
    <string name="hint_enter_collection_name">Enter the collection name</string>

    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <string name="format_email_subject">Recipe Link Support</string>
    <string name="format_email_app_info">
            &lt;Enter message here&gt;
            \n
            \n
            -------\n
            Information used for support purposes:\n
            Recipe Link Version: <xliff:g id="app_version">%1$s</xliff:g>\n
            Android Version: <xliff:g id="os_version">%2$s</xliff:g>
    </string>

</resources>
