<?xml version="1.0" encoding="utf-8"?><!--
  ~ fragment_recipes.xml
  ~ RecipeLink-SQLBrite
  ~
  ~ Created by Tyler Madonna on 6/30/2017.
  ~ Copyright © 2017 Tyler Madonna. All rights reserved.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipes_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/recipes_empty_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.ListItemPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_macro"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:gravity="center_horizontal|top"
            android:text="@string/prompt_no_recipes_found" />

        <TextView
            style="@style/TextAppearance.ListItemSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center_horizontal|top"
            android:text="@string/prompt_share_from_browser_prompt" />

        <Button
            android:id="@+id/recipes_empty_learn_how_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/action_learn_how"
            android:layout_gravity="center_horizontal|top"/>

    </LinearLayout>

</FrameLayout>